slide down and up done

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
                 EBAC Motors
             </h1>
             <div class="menu-burger">
-                <span></span>
-                <span></span>
-                <span></span>
+                <span id="sp"><button id="button" type="submit"></button></span>
+                <span id="sp"></span>
+                <span id="sp"></span>
             </div>
         </div>
+        <form>
         <nav>
             <div class="container">
                 <ul>
@@ -35,8 +36,9 @@
                 </ul>
             </div>
         </nav>
+        </form>
     </header>
 </body>
-<script src="./https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="./main.js"></script>
 </html>
