--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title> <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
     <header>
@@ -38,7 +40,23 @@
         </nav>
         </form>
     </header>
-</body>
+    <div id="carousel-imagens">
+    <img src="./media/slide1.png" alt="chevy">
+    <img src="./media/slide2.png" alt="porsche">
+    <img src="./media/slide3.png" alt="volvo">
+    </div>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="./main.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#carousel-imagens').slick({
+            autoplay:true
+        })
+        
+    })
+</script>
+</body>
 </html>
